--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "eslint"
   ],
   "files": [
-    "/default",
     "/env",
-    "/esm"
+    "/esm",
+    "/shared"
   ],
   "directories": {},
   "bugs": {
