removed type-fest

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "name": "Michael Leahy"
   },
   "dependencies": {
-    "eslint-plugin-jsdoc": "^32.0.0",
-    "type-fest": "^0.21.0"
+    "eslint-plugin-jsdoc": "^32.0.0"
   },
   "repository": {
     "type": "git",
