--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
   "name": "@typhonjs-config/eslint-config",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Provides shared ESLint configs files for TyphonJS projects.",
-  "homepage": "https://github.com/typhonjs-config/eslint-config",
-  "license": "MIT",
-  "author": "typhonrt",
-  "maintainers": [
-    {
-      "name": "Michael Leahy",
-      "email": "support@typhonjs.io",
-      "url": "https://github.com/typhonrt"
-    }
+  "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
+  "contributors": [
+    "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)"
   ],
   "dependencies": {
     "eslint-plugin-jsdoc": "^35"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/typhonjs-config/eslint-config.git"
-  },
-  "keywords": [
-    "typhonjs",
-    "eslint"
-  ],
+  "repository": "github:typhonjs-config/eslint-config",
   "files": [
     "/env",
     "/esm",
     "/shared"
   ],
+  "homepage": "https://github.com/typhonjs-config/eslint-config#readme",
+  "keywords": [
+    "typhonjs",
+    "config",
+    "eslint"
+  ],
+  "license": "MIT",
   "directories": {},
   "bugs": {
     "url": "https://github.com/typhonjs-config/eslint-config/issues"
